<resources>
    <string name="app_name">Registro Elettronico</string>

    <string name="prompt_email">Username o email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Accedi</string>
    <string name="action_sign_in_short">Accedi</string>
    <string name="error_field_required">Questo campo è richiesto!</string>
    <string name="mediaorale">Media orale</string>
    <string name="mediascritto">Media scritto</string>
    <string name="mediapratico">Media pratico</string>
    <string name="dettagliovoti">Dettaglio voti %1$s</string>
    <string name="compitidi">Compiti di %1$s</string>
    <string name="segnalaproblema">Segnala un problema</string>
    <string name="nointernet">Non sei connesso ad internet!</string>
    <string name="notifichevoti">Notifiche voti</string>
    <string name="notificheagenda">Notifiche agenda</string>
    <string name="notifichescrutini">Notifiche scrutini</string>
    <string name="aggcal">Aggiungi al calendario</string>
    <string name="benvenuto">Benvenuto!</string>
    <string name="votochepensi">Seleziona il voto che pensi di aver preso:</string>
    <string name="mediaipotetica">Media ipotetica %1$s</string>
    <string name="scaricati">Scaricati %1$s</string>
    <string name="eventoperil">Evento per il %1$s</string>
    <string name="salva">Salva</string>
    <string name="modifica">Modifica</string>
    <string name="elimina">Elimina</string>
    <string name="eventodel">Evento del %1$s-%2$s-%3$s</string>
    <plurals name="datains">
        <item quantity="one">%1$s (%2$d giorno prima)</item>
        <item quantity="other">%1$s (%2$d giorni prima)</item>
    </plurals>
    <string name="datainsogg"> %1$s (Il giorno stesso)</string>
    <string name="impostaobb">Imposta obiettivo</string>
    <string name="ultimaversione">Non hai l\'ultima versione dell\'app. Aggiornala dal play store!</string>
    <string name="impostaobbdes">Seleziona il voto a cui vuoi arrivare o che vuoi mantenere</string>
    <string name="toast_crash">E\' stato rilevato un problema, verrà segnalato allo sviluppatore. Se puoi contattaci via mail: luconi.simone@gmail.com, risolveremo il problema più velocemente.</string>
    <string name="modificaevento">Cosa vuoi fare?</string>
    <string name="permission_rationale">Il permesso per leggere i contatti è richiesto per l\'autocompletamento della mail.</string>
    <string name="disclamer">Se avete problemi di accesso contattaci via mail (luconi.simone@gmail.com), una recensione negativa non risolverà il problema. \nQuest\'app funziona solamente con il registro elettronico Spaggiari.\nNon siamo in alcun modo legati al gruppo Spaggiari</string>
    <string name="aggacc">Aggiungi Account</string>
    <string name="eliminaacc">Elimina Account</string>
    <string name="eliminaaccdes">Voi davvero eliminare l\'account %1$s?</string>
    <string name="forzacontrollo">Forza ricontrollo (Notifiche)</string>
    <string name="home">Home</string>
    <string name="fileoff">File Offline</string>
    <string name="oggiscuola">Oggi a scuola</string>
    <string name="circolari">Circolari</string>
    <string name="scrutini">Scrutini</string>
    <string name="lezioni">Lezioni</string>
    <string name="title_activity_intro">Intro</string>
    <string name="versioneweb">Versione Web [ALPHA]</string>
    <string name="tabpartenza">Tab di partenza</string>
    <string name="seltabpartenza">Selezione tab di partenza</string>
    <string name="ero">Ero:</string>
    <string name="oggi">Oggi:</string>
    <string name="saro">Sarò?</string>
    <string name="titolo">Titolo</string>
    <string name="contenuto">Contenuto</string>
    <string name="caricamento_dati_in_corso">Caricamento dati in corso…</string>
    <string name="intro_app_desc">Verrai introdotto ad alcune funzionalità dell\'app.</string>
    <string name="dettagli_medie_titolo">Dettaglio medie</string>
    <string name="dettaglio_media_desc">Nei primi tre tab premi sulla scheda di una materia per visualizzare il dettaglio delle medie</string>
    <string name="media_ipotetica_titolo">Media ipotetica</string>

    <string-array name="tab_title">
        <item>Medie</item>
        <item>P1</item>
        <item>P2</item>
        <item>Voti</item>
        <item>Agenda</item>
        <item>Note</item>
        <item>Didattica</item>
    </string-array>

    <!-- Stringhe di test -->
    <string name="yyyy_mm_dd_hh_mm_ss">yyyy-MM-dd HH:mm:ss</string>
    <string name="_5">5</string>
    <string name="_01_01_orale">01/01 - Orale</string>
    <string name="lorem1">Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="matematica">Matematica</string>
    <string name="filebellissimo_pdf">filebellissimo.pdf</string>
    <string name="_14_12_2015">(14/12/2015)</string>
    <string name="prof_severus_piton">Prof. Severus Piton</string>
    <string name="lorem2">Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</string>
    <string name="_15_19_70_12_50_12">15/19/70 12:50:12</string>
    <string name="_15_78gb">15.78gb</string>
    <string name="_8_22">8.22</string>
    <string name="pozioni">(Pozioni)</string>
    <string name="_1">1^</string>
    <string name="devi_prendere_almeno_5">Devi prendere almeno 5</string>
    <string name="freddembre_2025">Freddembre 2025</string>
    <string name="_12_11_2015_12_25_54">12–11–2015 12:25:54</string>
    <string name="media_ipotetica_desc">oppure tieni premuto per visualizzare la media ipotetica</string>
    <string name="dettaglio_voti_titolo">Dettaglio voti</string>
    <string name="dettaglio_voti_desc">Nel tab voti clicca su una scheda per visualizzare i commenti dei voti</string>
    <string name="agenda_titolo">Agenda</string>
    <string name="agenda_desc">Nell\'agenda le verifiche vengono indicate con dei pallini rossi, mentre i compiti con dei pallini gialli</string>
    <string name="ultima_cosa_titolo">Un ultima cosa</string>
    <string name="ultima_cosa_desc">Abbiamo bisogno dei permessi di archiviazione per scaricare le circolari e i file dalla didattica</string>
    <string name="sei_pronto_titolo">Sei pronto!</string>
    <string name="sei_pronto_desc">Ora sei pronto per utilizzare al meglio quest app. Ricorda, per qualsiasi problema contattaci a sharpdroidmail@gmail.com</string>
    <!-- Fine stringhe di test -->
</resources>
