<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/obbiettivobtn"
        android:title="@string/impostaobb"
        app:showAsAction="never" />

    <item
        android:id="@+id/tabbtn"
        android:title="@string/tabpartenza"
        app:showAsAction="never" />

    <item
        android:id="@+id/notifichevoti"
        android:checkable="true"
        android:title="@string/notifichevoti"
        app:showAsAction="never" />

    <item
        android:id="@+id/notificheagenda"
        android:checkable="true"
        android:title="@string/notificheagenda"
        app:showAsAction="never" />

    <item
        android:id="@+id/notifichescrutini"
        android:checkable="true"
        android:title="@string/notifichescrutini"
        app:showAsAction="never" />
</menu>