<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/CurrTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yyyy_mm_dd_hh_mm_ss"
        android:textColor="@color/textcolorgrey" />

    <EditText
        android:id="@+id/Tit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/titolo"
        android:inputType="textPersonName"
        android:textColor="@color/textcolorbittitle"
        android:textColorHint="@color/textcolorgrey" />

    <EditText
        android:id="@+id/Cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:hint="@string/contenuto"
        android:textColor="@color/textcolorbittitle"
        android:textColorHint="@color/textcolorgrey" />
</LinearLayout>