<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20.0dip"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textVoto"
            android:layout_width="40.0dip"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:textSize="25.0sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15.0dip"
        android:layout_marginRight="15.0dip"
        android:orientation="vertical">

        <TextView
            android:id="@+id/datatipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_01_01_orale"
            android:textColor="@color/textcolorgrey" />

        <TextView
            android:id="@+id/commento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3.0dip"
            android:text="@string/lorem2"
            android:textColor="@color/textcolorgrey" />
    </LinearLayout>
</LinearLayout>