<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/calendartoday"
        android:shortcutDisabledMessage="@string/agenda_titolo"
        android:shortcutId="agenda"
        android:shortcutLongLabel="@string/agenda_titolo"
        android:shortcutShortLabel="@string/agenda_titolo">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.sharpdroid.registroelettronico.MainActivity"
            android:targetPackage="com.sharpdroid.registroelettronico">
            <extra
                android:name="com.sharpdroid.registroelettronico.notifiche.TAB"
                android:value="4" />
        </intent>
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/book"
        android:shortcutDisabledMessage="@string/dettaglio_voti_titolo"
        android:shortcutId="voti_dettaglio"
        android:shortcutLongLabel="@string/dettaglio_voti_titolo"
        android:shortcutShortLabel="@string/dettaglio_voti_titolo">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.sharpdroid.registroelettronico.MainActivity"
            android:targetPackage="com.sharpdroid.registroelettronico">
            <extra
                android:name="com.sharpdroid.registroelettronico.notifiche.TAB"
                android:value="3" />
        </intent>
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/document"
        android:shortcutDisabledMessage="@string/circolari"
        android:shortcutId="circolari"
        android:shortcutLongLabel="@string/circolari"
        android:shortcutShortLabel="@string/circolari">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.sharpdroid.registroelettronico.Circolari"
            android:targetPackage="com.sharpdroid.registroelettronico" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/school"
        android:shortcutDisabledMessage="@string/oggiscuola"
        android:shortcutId="oggiscuola"
        android:shortcutLongLabel="@string/oggiscuola"
        android:shortcutShortLabel="@string/oggiscuola">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.sharpdroid.registroelettronico.OggiAScuola"
            android:targetPackage="com.sharpdroid.registroelettronico" />
    </shortcut>
</shortcuts>
