<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/OggiScuolaCv"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="10.0dip"
    card_view:cardBackgroundColor="#ffffffff">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/OggiScuolaOra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:text="@string/_1"
            android:textColor="@color/md_material_blue_800" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="20.0dip"
            android:layout_marginTop="10.0dip">

            <LinearLayout
                android:id="@+id/OggiScuolaPrimoLay"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/OggiScuolaProf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prof_severus_piton"
                    android:textColor="@color/material_blue_grey"
                    android:textSize="18.0sp" />

                <TextView
                    android:id="@+id/OggiScuolaMateria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1.0dip"
                    android:text="@string/pozioni"
                    android:textColor="@color/material_blue_grey"
                    android:textSize="12.0sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/OggiScuolaDes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/OggiScuolaPrimoLay"
                android:layout_marginBottom="3.0dip"
                android:text="@string/lorem1"
                android:textColor="@color/textcolorgrey"
                android:textColorLink="#ff0099ff"
                android:textSize="13.0sp"
                android:visibility="visible" />
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>