<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10.0dip"
    android:layout_marginRight="10.0dip"
    android:layout_marginTop="10.0dip"
    card_view:cardBackgroundColor="#ffffffff">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:baselineAligned="false"
        android:gravity="center_vertical">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/relativeLayout">

            <com.github.rahatarmanahmed.cpv.CircularProgressView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/progressvoti"
                android:layout_width="50.0dip"
                android:layout_height="50.0dip"
                android:layout_centerInParent="true"
                android:layout_marginRight="18.0dip"
                app:cpv_animAutostart="true"
                app:cpv_indeterminate="false"
                app:cpv_progress="80.0" />

            <TextView
                android:id="@+id/media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginRight="20.0dip"
                android:text="@string/_8_22"
                android:textColor="@color/textcolorgrey"
                android:textSize="15.0sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="16.0dip"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/relativeLayout"
            android:layout_toStartOf="@+id/relativeLayout">

            <TextView
                android:id="@+id/Materia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5.0dip"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/matematica"
                android:textColor="@color/material_blue_grey"
                android:textSize="18.0sp" />

            <TextView
                android:id="@+id/des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Materia"
                android:layout_marginBottom="3.0dip"
                android:autoLink="email|web"
                android:text="@string/devi_prendere_almeno_5"
                android:textColor="@color/textcolorgrey"
                android:textColorLink="#ff0099ff"
                android:textSize="13.0sp"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/layoutData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/des"
                android:layout_marginTop="5.0dip"
                android:gravity="center"
                android:orientation="horizontal">

                <com.sharpdroid.registroelettronico.SharpLibrary.ClockView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/ClockView"
                    android:layout_width="20.0dip"
                    android:layout_height="20.0dip"
                    app:clockColor="@color/bluematerial"
                    app:h="13"
                    app:m="15" />

                <TextView
                    android:id="@+id/dataTx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1.0dip"
                    android:layout_marginLeft="3.0dip"
                    android:text="@string/_12_11_2015_12_25_54"
                    android:textColor="@color/textcolorgrey"
                    android:textColorLink="#ff0099ff"
                    android:textSize="13.0sp"
                    android:visibility="visible" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>