<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        card_view:cardBackgroundColor="#fff"
        android:id="@+id/cvOrale">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_alignParentTop="true"
                    android:textSize="20sp"
                    android:text="@string/mediaorale"
                    android:textColor="@color/material_blue_grey"
                    />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:gravity="end">


                <com.github.rahatarmanahmed.cpv.CircularProgressView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/progressMediaOrale"
                    android:layout_width="50dp"
                    android:layout_marginRight="18dp"
                    android:layout_height="50dp"
                    app:cpv_animAutostart="true"
                    app:cpv_indeterminate="false"
                    app:cpv_progress="80"
                    android:layout_centerInParent="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/textcolorgrey"
                    android:text="8.22"
                    android:layout_centerInParent="true"
                    android:id="@+id/mediaOrale" />

            </RelativeLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        card_view:cardBackgroundColor="#fff"
        android:id="@+id/cvScritto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_alignParentTop="true"
                    android:textSize="20sp"
                    android:text="@string/mediascritto"
                    android:textColor="@color/material_blue_grey"
                    />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:gravity="end">


                <com.github.rahatarmanahmed.cpv.CircularProgressView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/progressvMediaScritto"
                    android:layout_width="50dp"
                    android:layout_marginRight="18dp"
                    android:layout_height="50dp"
                    app:cpv_animAutostart="true"
                    app:cpv_indeterminate="false"
                    app:cpv_progress="80"
                    android:layout_gravity="right"
                    android:layout_centerInParent="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/textcolorgrey"
                    android:text="8.22"
                    android:layout_centerInParent="true"
                    android:id="@+id/mediaScritto"/>

            </RelativeLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        card_view:cardBackgroundColor="#fff"
        android:id="@+id/cvPratico">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_alignParentTop="true"
                    android:textSize="20sp"
                    android:text="@string/mediapratico"
                    android:textColor="@color/material_blue_grey"
                    />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:gravity="end">


                <com.github.rahatarmanahmed.cpv.CircularProgressView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/progressMediaPratico"
                    android:layout_width="50dp"
                    android:layout_marginRight="18dp"
                    android:layout_height="50dp"
                    app:cpv_animAutostart="true"
                    app:cpv_indeterminate="false"
                    app:cpv_progress="80"
                    android:layout_gravity="right"
                    android:layout_centerInParent="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/textcolorgrey"
                    android:text="8.22"
                    android:id="@+id/mediaPratico"
                    android:layout_centerInParent="true" />

            </RelativeLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>